homework6/vparking-scaffold/vparking/vparking-users/templates/add-user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: add-user-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - arch.homework
      secretName: nginx-ingress-nginx-admission
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /users/add
            pathType: Exact
            backend:
              service:
                name: vparking-settings
                port:
                  number: 8080
